[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hospital-scheduling-env"
version = "1.0.0"
description = "OpenEnv-compliant hospital resource scheduling environment for AI agent training"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "arpita1204"}]
keywords = ["openenv", "reinforcement-learning", "hospital", "scheduling", "healthcare"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "httpx>=0.24.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
"Homepage" = "https://huggingface.co/spaces/arpita1204/hospital"
"Repository" = "https://github.com/arpita7819/hospital-scheduling-env"

[tool.openenv]
name = "HospitalSchedulingEnv"
version = "1.0.0"
entry_point = "environment:HospitalSchedulingEnv"
tasks = ["basic_triage", "full_scheduling", "crisis_surge"]
inference = "inference:run_inference"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
